modified:   index.html new file:   pages/1.png new file:   pages/2.png new file:   pages/3.png new file:   pages/4.png new file:   pages/5.png

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="page page-0">
                 <div class="page-content">
                     <!-- Replace with your actual page 0 image -->
-                    <img src="https://placehold.co/450x600/FF5733/FFFFFF?text=Magazine+Cover" alt="Page 0 - Magazine Cover">
+                    <img src="pages\1.png" alt="Page 0 - Magazine Cover">
                 </div>
             </div>
 
@@ -194,7 +194,7 @@
             <div class="page page-1">
                 <div class="page-content">
                     <!-- Replace with your actual page 1 image -->
-                    <img src="https://placehold.co/450x600/33FF57/FFFFFF?text=Page+1" alt="Page 1 - Inside Cover">
+                    <img src="pages\2.png" alt="Page 1 - Inside Cover">
                 </div>
             </div>
 
@@ -202,7 +202,7 @@
             <div class="page page-2">
                 <div class="page-content">
                     <!-- Replace with your actual page 2 image -->
-                    <img src="https://placehold.co/450x600/3357FF/FFFFFF?text=Page+2" alt="Page 2 - Content">
+                    <img src="pages\3.png" alt="Page 2 - Content">
                 </div>
             </div>
 
@@ -210,7 +210,7 @@
             <div class="page page-3">
                 <div class="page-content">
                     <!-- Replace with your actual page 3 image -->
-                    <img src="https://placehold.co/450x600/FF33A1/FFFFFF?text=Page+3" alt="Page 3 - Content">
+                    <img src="pages\4.png" alt="Page 3 - Content">
                 </div>
             </div>
 
@@ -218,47 +218,7 @@
             <div class="page page-4">
                 <div class="page-content">
                     <!-- Replace with your actual page 4 image -->
-                    <img src="https://placehold.co/450x600/A133FF/FFFFFF?text=Page+4" alt="Page 4 - Content">
-                </div>
-            </div>
-
-            <!-- Page 5 -->
-            <div class="page page-5">
-                <div class="page-content">
-                    <!-- Replace with your actual page 5 image -->
-                    <img src="https://placehold.co/450x600/33FFA1/FFFFFF?text=Page+5" alt="Page 5 - Content">
-                </div>
-            </div>
-
-            <!-- Page 6 -->
-            <div class="page page-6">
-                <div class="page-content">
-                    <!-- Replace with your actual page 6 image -->
-                    <img src="https://placehold.co/450x600/FF8833/FFFFFF?text=Page+6" alt="Page 6 - Content">
-                </div>
-            </div>
-
-            <!-- Page 7 -->
-            <div class="page page-7">
-                <div class="page-content">
-                    <!-- Replace with your actual page 7 image -->
-                    <img src="https://placehold.co/450x600/33FF88/FFFFFF?text=Page+7" alt="Page 7 - Content">
-                </div>
-            </div>
-
-            <!-- Page 8 (Back Cover Content) -->
-            <div class="page page-8">
-                <div class="page-content">
-                    <!-- Replace with your actual page 8 image -->
-                    <img src="https://placehold.co/450x600/8833FF/FFFFFF?text=Page+8" alt="Page 8 - Back Cover Content">
-                </div>
-            </div>
-
-            <!-- Page 9 (Back Cover Outside) -->
-            <div class="page page-9">
-                <div class="page-content">
-                    <!-- Replace with your actual page 9 image -->
-                    <img src="https://placehold.co/450x600/FF3333/FFFFFF?text=Back+Cover" alt="Page 9 - Back Cover Outside">
+                    <img src="pages\5.png" alt="Page 4 - Content">
                 </div>
             </div>
         </div>
