new file:   Images/favicon.png modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test e-magazine</title>
+    <title>CMCA 40th Anniversary</title>
+    <link rel="icon" type="Images\favicon.png" href="favicon.png">
     <!-- Tailwind CSS CDN for basic styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
