--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CMCA 40th Anniversary</title>
-    <link rel="icon" type="Images\favicon.png" href="favicon.png">
+    <link rel="icon" type="image/png" href="Images/favicon.png">
     <!-- Tailwind CSS CDN for basic styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
