--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CMCA 40th Anniversary</title>
+    <title>CMCA 40th Anniversary Magazine</title>
     <!-- Favicon -->
     <link rel="icon" href="Images\favicon.png" type="image/png">
     <!-- Tailwind CSS CDN for basic styling -->
