--- a/index.html
+++ b/index.html
@@ -8,75 +8,77 @@
     <link rel="icon" href="Images\favicon.png" type="image/png">
     <!-- Tailwind CSS CDN for basic styling -->
     <style>
-        /* Ensure html and body take full viewport height */
         html, body {
             height: 100%;
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Prevent body scroll */
+            overflow: hidden;
         }
 
-        /* Custom CSS for the magazine container and pages */
         body {
-            font-family: "Inter", sans-serif; /* Using Inter font as per instructions */
+            font-family: "Inter", sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #1a202c; /* Dark mode body background */
-            color: #e2e8f0; /* Light text color for dark mode */
+            background-color: #1a202c;
+            color: #e2e8f0;
+
+            /* Background Image Styling */
+            background-image: url('Images/flipbook bg.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         #magazine {
-            /* Initial dimensions for larger screens */
             width: 800px;
             height: 500px;
-            background-color: #2d3748; /* Dark mode magazine background */
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); /* Stronger shadow for dark mode */
-            border-radius: 8px; /* Rounded corners for the magazine */
-            overflow: hidden; /* Important for turn.js */
+            background-color: #2d3748;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+            border-radius: 8px;
+            overflow: hidden;
         }
 
         #magazine .page {
-            background-color: #2d3748; /* Dark mode page background */
+            background-color: #2d3748;
             box-sizing: border-box;
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden; /* Ensure images don't overflow their page */
+            overflow: hidden;
         }
 
         #magazine .page img {
             max-width: 100%;
             max-height: 100%;
-            object-fit: contain; /* Ensure image fits within the page without cropping */
-            border-radius: 4px; /* Slightly rounded corners for images */
+            object-fit: contain;
+            border-radius: 4px;
         }
 
-        /* Responsive adjustments for smaller screens */
         @media (max-width: 900px) {
             #magazine {
-                width: 90vw; /* Use viewport width for responsiveness */
-                height: calc(90vw * (500 / 800)); /* Maintain aspect ratio */
+                width: 90vw;
+                height: calc(90vw * (500 / 800));
             }
         }
 
         @media (max-width: 600px) {
             #magazine {
-                width: 95vw; /* Even wider for very small screens */
-                height: calc(95vw * (500 / 800)); /* Maintain aspect ratio */
+                width: 95vw;
+                height: calc(95vw * (500 / 800));
             }
         }
 
-        /* Ensure magazine doesn't exceed viewport height on very tall/narrow screens */
         @media (max-height: 600px) {
             #magazine {
                 height: 90vh;
-                width: calc(90vh * (800 / 500)); /* Adjust width to maintain aspect ratio */
+                width: calc(90vh * (800 / 500));
             }
         }
     </style>
 </head>
-<body class="bg-gray-900 flex items-center justify-center"> <!-- Updated Tailwind class for dark body -->
+<body class="bg-gray-900 flex items-center justify-center">
 
     <div id="magazine" class="relative rounded-lg shadow-xl">
         <!-- Page 1: Cover Page -->
@@ -99,11 +101,71 @@
         <div class="page">
             <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+5" alt="Page 5 Content">
         </div>
-        <!-- Page 6: Back Cover -->
+        <!-- Page 6: Placeholder Pages (20 additional pages) -->
+        <div class="page">
+            <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+6" alt="Page 6 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+7" alt="Page 7 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+8" alt="Page 8 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+9" alt="Page 9 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+10" alt="Page 10 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+11" alt="Page 11 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+12" alt="Page 12 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+13" alt="Page 13 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+14" alt="Page 14 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+15" alt="Page 15 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+16" alt="Page 16 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+17" alt="Page 17 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+18" alt="Page 18 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+19" alt="Page 19 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+20" alt="Page 20 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+21" alt="Page 21 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+22" alt="Page 22 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+23" alt="Page 23 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+24" alt="Page 24 Content">
+        </div>
+        <div class="page">
+            <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+25" alt="Page 25 Content">
+        </div>
+        <!-- Page 26: Back Cover (originally page 6) -->
         <div class="page">
             <img src="https://placehold.co/400x500/2D3748/E2E8F0?text=Back+Cover" alt="Back Cover">
         </div>
-        <!-- Add more pages as needed following the same structure -->
     </div>
 
     <!-- jQuery is a dependency for turn.js -->
@@ -112,39 +174,26 @@
     <script src="http://www.turnjs.com/lib/turn.min.js"></script>
 
     <script>
-        // Ensure the DOM is fully loaded before initializing turn.js
         $(document).ready(function() {
-            // Log to confirm document ready
-            console.log("Document is ready. Attempting to initialize turn.js.");
-
-            // Function to initialize or resize the magazine, dynamically setting display mode
-            function initializeMagazine(currentPage = 1) { // currentPage parameter is now less critical for display mode
+            // Function to initialize or resize the magazine
+            function initializeMagazine() {
                 var magazine = $('#magazine');
                 var currentWidth = magazine.width();
                 var currentHeight = magazine.height();
-                // var totalPages = magazine.find('.page').length; // No longer needed for display mode logic
 
                 if ($.fn.turn) {
-                    console.log("turn.js function found.");
-
-                    // Always set displayMode to 'double' as requested
-                    var displayMode = 'double';
-
                     if (magazine.data('turn-page') === undefined) {
-                        console.log("Initializing magazine for the first time with display:", displayMode);
                         magazine.turn({
                             width: currentWidth,
                             height: currentHeight,
                             autoCenter: true,
                             gradients: true,
                             acceleration: true,
-                            display: displayMode, // Always use double display mode
+                            display: 'double',
                             duration: 1000,
                         });
                     } else {
-                        // If already initialized, just update display and size
-                        console.log("Updating existing magazine display to:", displayMode);
-                        magazine.turn('display', displayMode); // Change display mode
+                        // If already initialized, just update size
                         magazine.turn('size', currentWidth, currentHeight);
                     }
 
@@ -184,28 +233,21 @@
                 }
             }
 
-            // Optional: Add keyboard navigation
+            // Add keyboard navigation
             $(document).keydown(function(e){
                 var magazine = $('#magazine');
                 if (e.keyCode == 37) { // Left arrow key
                     magazine.turn('previous');
-                    e.preventDefault(); // Prevent default browser action (scrolling)
+                    e.preventDefault();
                 } else if (e.keyCode == 39) { // Right arrow key
                     magazine.turn('next');
-                    e.preventDefault(); // Prevent default browser action (scrolling)
+                    e.preventDefault();
                 }
-            });
-
-            // Listen for the 'turned' event to re-evaluate display mode and centering
-            $('#magazine').on('turned', function(event, page, view) {
-                // When a page is turned, re-initialize/resize with the correct display mode for the new page
-                initializeMagazine(page); // Pass the new page number (though display mode is now fixed to 'double')
             });
 
             // Handle window resize to make the magazine responsive
             $(window).on('resize', function() {
-                // On resize, re-initialize/resize with the current page's display mode
-                initializeMagazine($('#magazine').turn('page'));
+                initializeMagazine();
             });
         });
     </script>
