--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <!-- jQuery is a dependency for turn.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- turn.js library - Updated to official HTTPS CDN link and acceleration set to false -->
-    <script src="https://www.turnjs.com/lib/turn.min.js"></script>
+    <script src="turn.js"></script>
 
     <script>
         $(document).ready(function() {
