--- a/index.html
+++ b/index.html
@@ -12,32 +12,33 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow: hidden; /* Prevent body scroll */
         }
 
         body {
             font-family: "Inter", sans-serif;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: column; /* Stack magazine and controls vertically */
+            justify-content: center; /* Center content vertically */
+            align-items: center; /* Center content horizontally */
             background-color: #1a202c;
             color: #e2e8f0;
-
-            /* Background Image Styling */
             background-image: url('Images/flipbook bg.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
+            width: 100vw; /* Ensure body takes full viewport width */
+            height: 100vh; /* Ensure body takes full viewport height */
         }
 
         #magazine {
-            width: 800px;
-            height: 500px;
+            /* JavaScript will set width and height directly */
             background-color: #2d3748;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
             border-radius: 8px;
             overflow: hidden;
+            flex-shrink: 0; /* Prevent shrinking if space is tight */
         }
 
         #magazine .page {
@@ -47,6 +48,8 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
+            width: 100%;
+            height: 100%;
         }
 
         #magazine .page img {
@@ -56,24 +59,57 @@
             border-radius: 4px;
         }
 
-        @media (max-width: 900px) {
-            #magazine {
-                width: 90vw;
-                height: calc(90vw * (500 / 800));
-            }
+        /* Navigation Controls Styling */
+        #navigation-controls {
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+            background-color: rgba(45, 55, 72, 0.8);
+            padding: 0.75rem 1.5rem;
+            border-radius: 0.5rem;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            z-index: 10;
+            margin-top: 20px; /* Space between magazine and controls */
+        }
+
+        .nav-button {
+            background-color: #4a5568;
+            color: #e2e8f0;
+            padding: 0.5rem 1rem;
+            border-radius: 0.375rem;
+            cursor: pointer;
+            transition: background-color 0.2s ease-in-out;
+            font-weight: bold;
+            border: none;
+            outline: none;
+        }
+
+        .nav-button:hover {
+            background-color: #6366f1;
+        }
+
+        .page-input {
+            width: 60px;
+            padding: 0.5rem;
+            border-radius: 0.375rem;
+            border: 1px solid #4a5568;
+            background-color: #2d3748;
+            color: #e2e8f0;
+            text-align: center;
+        }
+
+        .page-indicator {
+            color: #e2e8f0;
+            font-size: 1rem;
+            min-width: 80px;
+            text-align: center;
         }
 
         @media (max-width: 600px) {
-            #magazine {
-                width: 95vw;
-                height: calc(95vw * (500 / 800));
-            }
-        }
-
-        @media (max-height: 600px) {
-            #magazine {
-                height: 90vh;
-                width: calc(90vh * (800 / 500));
+            #navigation-controls {
+                flex-direction: column;
+                gap: 0.5rem;
+                padding: 0.5rem 1rem;
             }
         }
     </style>
@@ -81,27 +117,21 @@
 <body class="bg-gray-900 flex items-center justify-center">
 
     <div id="magazine" class="relative rounded-lg shadow-xl">
-        <!-- Page 1: Cover Page -->
         <div class="page">
             <img src="https://placehold.co/400x500/374151/D1D5DB?text=Cover+Page" alt="Cover Page">
         </div>
-        <!-- Page 2: Inside Left -->
         <div class="page">
             <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+2" alt="Page 2 Content">
         </div>
-        <!-- Page 3: Inside Right -->
         <div class="page">
             <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+3" alt="Page 3 Content">
         </div>
-        <!-- Page 4: Next Left -->
         <div class="page">
             <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+4" alt="Page 4 Content">
         </div>
-        <!-- Page 5: Next Right -->
         <div class="page">
             <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+5" alt="Page 5 Content">
         </div>
-        <!-- Page 6: Placeholder Pages (20 additional pages) -->
         <div class="page">
             <img src="https://placehold.co/400x500/4B5563/F9FAFB?text=Page+6" alt="Page 6 Content">
         </div>
@@ -162,51 +192,102 @@
         <div class="page">
             <img src="https://placehold.co/400x500/374151/D1D5DB?text=Page+25" alt="Page 25 Content">
         </div>
-        <!-- Page 26: Back Cover (originally page 6) -->
         <div class="page">
             <img src="https://placehold.co/400x500/2D3748/E2E8F0?text=Back+Cover" alt="Back Cover">
         </div>
     </div>
 
-    <!-- jQuery is a dependency for turn.js -->
+    <div id="navigation-controls">
+        <button id="prev-btn" class="nav-button">Previous</button>
+        <span id="page-indicator" class="page-indicator">Page 1 of 26</span>
+        <input type="number" id="page-jump-input" class="page-input" min="1" value="1">
+        <button id="go-btn" class="nav-button">Go</button>
+        <button id="next-btn" class="nav-button">Next</button>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- turn.js library - Updated to official HTTPS CDN link and acceleration set to false -->
-    <script src="turn.js"></script>
+    <script src="lib/turn.min.js"></script>
 
     <script>
         $(document).ready(function() {
+            var magazine = $('#magazine');
+            var totalPages = magazine.find('.page').length;
+            var pageIndicator = $('#page-indicator');
+            var pageJumpInput = $('#page-jump-input');
+            var images = magazine.find('img');
+            var totalImages = images.length;
+            var loadedImages = 0;
+
+            // Function to update the page indicator
+            function updatePageIndicator(currentPage) {
+                pageIndicator.text('Page ' + currentPage + ' of ' + totalPages);
+                pageJumpInput.val(currentPage);
+            }
+
             // Function to initialize or resize the magazine
             function initializeMagazine() {
-                var magazine = $('#magazine');
-                var currentWidth = magazine.width();
-                var currentHeight = magazine.height();
+                var windowWidth = $(window).width();
+                var windowHeight = $(window).height();
+
+                // Define the aspect ratio of the entire magazine (double page spread)
+                // Original magazine spread was 800x500, so aspect ratio is 800/500 = 1.6
+                const magazineAspectRatio = 800 / 500;
+
+                // Get the height of navigation controls
+                const navControlsHeight = $('#navigation-controls').outerHeight(true) || 0;
+
+                // Define some padding around the magazine and controls
+                const verticalPadding = 40; // Total vertical space (top + bottom)
+                const horizontalPadding = 40; // Total horizontal space (left + right)
+
+                // Calculate available space for the magazine
+                const availableHeight = windowHeight - navControlsHeight - verticalPadding;
+                const availableWidth = windowWidth - horizontalPadding;
+
+                let targetMagazineWidth = availableWidth;
+                let targetMagazineHeight = availableWidth / magazineAspectRatio;
+
+                // If scaling by width makes it too tall, scale by height instead
+                if (targetMagazineHeight > availableHeight) {
+                    targetMagazineHeight = availableHeight;
+                    targetMagazineWidth = availableHeight * magazineAspectRatio;
+                }
+
+                // Ensure minimum size if needed, though for responsiveness, it might be better to let it scale down
+                // If you want a minimum size, add it here, e.g.:
+                // if (targetMagazineWidth < 400) targetMagazineWidth = 400;
+                // if (targetMagazineHeight < 250) targetMagazineHeight = 250;
+
+
+                // Apply calculated dimensions to the magazine container
+                magazine.css({
+                    width: targetMagazineWidth + 'px',
+                    height: targetMagazineHeight + 'px'
+                });
 
                 if ($.fn.turn) {
                     if (magazine.data('turn-page') === undefined) {
+                        // Initialize turn.js only once
                         magazine.turn({
-                            width: currentWidth,
-                            height: currentHeight,
+                            width: targetMagazineWidth,
+                            height: targetMagazineHeight,
                             autoCenter: true,
                             gradients: true,
-                            acceleration: false, // Set to false to potentially fix mouse issues
-                            display: 'double',
+                            acceleration: false,
+                            display: 'double', // Always display as double for stability
                             duration: 1000,
                         });
+                        updatePageIndicator(magazine.turn('page'));
                     } else {
                         // If already initialized, just update size
-                        magazine.turn('size', currentWidth, currentHeight);
+                        magazine.turn('size', targetMagazineWidth, targetMagazineHeight);
                     }
-
                 } else {
                     console.error("Error: turn.js function not found. Ensure the script is loaded correctly.");
                 }
             }
 
             // Load all images first, then initialize turn.js
-            var images = $('#magazine').find('img');
-            var loadedImages = 0;
-            var totalImages = images.length;
-
             if (totalImages === 0) {
                 initializeMagazine();
             } else {
@@ -235,7 +316,6 @@
 
             // Add keyboard navigation
             $(document).keydown(function(e){
-                var magazine = $('#magazine');
                 if (e.keyCode == 37) { // Left arrow key
                     magazine.turn('previous');
                     e.preventDefault();
@@ -245,9 +325,36 @@
                 }
             });
 
-            // Handle window resize to make the magazine responsive
+            // Debounce function for resize event
+            var resizeTimer;
             $(window).on('resize', function() {
-                initializeMagazine();
+                clearTimeout(resizeTimer);
+                resizeTimer = setTimeout(function() {
+                    initializeMagazine();
+                }, 250);
+            });
+
+            // Navigation button click handlers
+            $('#prev-btn').on('click', function() {
+                magazine.turn('previous');
+            });
+
+            $('#next-btn').on('click', function() {
+                magazine.turn('next');
+            });
+
+            $('#go-btn').on('click', function() {
+                var pageNum = parseInt(pageJumpInput.val(), 10);
+                if (!isNaN(pageNum) && pageNum >= 1 && pageNum <= totalPages) {
+                    magazine.turn('page', pageNum);
+                } else {
+                    console.warn("Invalid page number. Please enter a number between 1 and " + totalPages);
+                }
+            });
+
+            // Listen for the 'turned' event to update the page indicator
+            magazine.on('turned', function(event, page, view) {
+                updatePageIndicator(page);
             });
         });
     </script>
