--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            width: 100vw; /* Ensure body takes full viewport width */
-            height: 100vh; /* Ensure body takes full viewport height */
+            width: 100vw;
+            height: 100vh;
         }
 
         #magazine {
-            /* JavaScript will set width and height directly */
             background-color: #2d3748;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
             border-radius: 8px;
@@ -230,15 +229,14 @@
                 var windowHeight = $(window).height();
 
                 // Define the aspect ratio of the entire magazine (double page spread)
-                // Original magazine spread was 800x500, so aspect ratio is 800/500 = 1.6
                 const magazineAspectRatio = 800 / 500;
 
                 // Get the height of navigation controls
                 const navControlsHeight = $('#navigation-controls').outerHeight(true) || 0;
 
                 // Define some padding around the magazine and controls
-                const verticalPadding = 40; // Total vertical space (top + bottom)
-                const horizontalPadding = 40; // Total horizontal space (left + right)
+                const verticalPadding = 40;
+                const horizontalPadding = 40;
 
                 // Calculate available space for the magazine
                 const availableHeight = windowHeight - navControlsHeight - verticalPadding;
@@ -253,12 +251,6 @@
                     targetMagazineWidth = availableHeight * magazineAspectRatio;
                 }
 
-                // Ensure minimum size if needed, though for responsiveness, it might be better to let it scale down
-                // If you want a minimum size, add it here, e.g.:
-                // if (targetMagazineWidth < 400) targetMagazineWidth = 400;
-                // if (targetMagazineHeight < 250) targetMagazineHeight = 250;
-
-
                 // Apply calculated dimensions to the magazine container
                 magazine.css({
                     width: targetMagazineWidth + 'px',
@@ -267,19 +259,17 @@
 
                 if ($.fn.turn) {
                     if (magazine.data('turn-page') === undefined) {
-                        // Initialize turn.js only once
                         magazine.turn({
                             width: targetMagazineWidth,
                             height: targetMagazineHeight,
                             autoCenter: true,
                             gradients: true,
                             acceleration: false,
-                            display: 'double', // Always display as double for stability
+                            display: 'double',
                             duration: 1000,
                         });
                         updatePageIndicator(magazine.turn('page'));
                     } else {
-                        // If already initialized, just update size
                         magazine.turn('size', targetMagazineWidth, targetMagazineHeight);
                     }
                 } else {
